fix(search-field): fix icon visibility in contrast mode

--- a/packages/components/src/search-field/SearchField.module.css
+++ b/packages/components/src/search-field/SearchField.module.css
@@ -30,6 +30,10 @@
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+
+  @media (forced-colors: active) {
+    stroke: canvastext;
+  }
 }
 
 .clear {
